--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,11 @@
 asgiref==3.8.1
-Django==5.1.3
+beautifulsoup4==4.12.3
+Django==4.2.16
+django-bootstrap-v5==1.0.11
+django-widget-tweaks==1.5.0
+gunicorn==23.0.0
+packaging==24.2
+soupsieve==2.6
 sqlparse==0.5.2
 tzdata==2024.2
+whitenoise==6.8.2
